--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 
 <body>
 	<!-- this is a comment in HTML -->
-	<h1>Scott Klemmer</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
+	<h1>Nazia Rizvi</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
 	<h4>Project Portfolio</h4>
 
 	<!-- p means paragraph -->
-	<p>Scott is an Associate Professor of Cognitive Science and Computer Science & Engineering at UC San Diego, where he is a co-founder and Associate Director of the Design Lab. He previously served as Associate Professor of Computer Science at Stanford, where he co-directed the HCI Group, held the Bredt Faculty Scholar chair, and was a founding participant in the d.school. </p>
+	<p>Nazia is senior majoring in Computer Science  at UC San Diego, where my areas of focus is primarily computer security and artificial intelligence. I transferred from Palomar college and first started studying Marine Biology. I switched my major to computer science because I enjoy challenging problems. </p>
 
-	<h4>Projects</h4>
+	<h4>Future Projects</h4>
 	<ol>
 		<li>Design Thinking</li>
 		<li>Needfinding</li>
