Typos, want to make more changes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<h4>Project Portfolio</h4>
 
 	<!-- p means paragraph -->
-	<p>Nazia is senior majoring in Computer Science  at UC San Diego, where my areas of focus is primarily computer security and artificial intelligence. I transferred from Palomar college and first started studying Marine Biology. I switched my major to computer science because I enjoy challenging problems. </p>
+	<p>Nazia is senior majoring in Computer Science  at UC San Diego, where her areas of focus is computer security. She also is interested in artificial intelligence. She transferred from Palomar college and first started studying Marine Biology. She switched her major to computer science because I enjoy challenging problems. </p>
 
 	<h4>Future Projects</h4>
 	<ol>
